<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android-scala-test</string>
    <string name="teamName">Team Name</string>
    <string name="competitionName">Competition Name</string>
    <string name="numberOfPlayers">Number of Players</string>
    <string name="numberOfSubs">Number of Subs</string>
    <string name="lengthOfHalf">Length of Half</string>
    <string name="competitionSetupDialogMessage">Competition Setup</string>
    <string name="matchSetupDialogMessage">Match Setup</string>
    <string name="teamSetupDialogMessage">Team Setup</string>
    <string name="viewMatchButton">View Existing Matches</string>
    <string name="matchStageDialogMessage">Are you sure you wish to proceed?</string>
    <string name="deleteMatch">Delete match?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="undoLast">Undo Last</string>
    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="scoreDash">-</string>
    <string name="goal">Goal</string>
    <string name="goalFromPlay">Goal from play</string>
    <string name="goalFromSetPlay">Goal from free/penalty</string>
    <string name="point">Point</string>
    <string name="pointFromPlay">Point from play</string>
    <string name="pointFromSetPlay">Point from free/penalty</string>
    <string name="miss">Miss</string>
    <string name="card">Card</string>
    <string name="kickout">Kickout</string>
    <string name="fortyFiveOrSixtyFive">45 or 65</string>
    <string name="foul">Foul</string>
    <string name="penalty">Penalty</string>
    <string name="free">Free</string>
    <string name="score">Score</string>
    <string name="misses">Misses</string>
    <string name="kickoutsWon">Kickouts Won</string>
    <string name="yellowCards">Yellow Cards</string>
    <string name="redCards">Red Cards</string>
    <string name="viewIndividualMatchButton">View</string>
    <string name="deleteIndividualMatchButton">Delete</string>
    <string name="blackCards">Black Cards</string>

</resources>