<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/teamName" />

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/score" />

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/misses" />

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/kickoutsWon" />

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/yellowCards" />

    <TextView
        style="@style/statisticLabelStyle"
        android:text="@string/redCards" />

    <TextView
            style="@style/statisticLabelStyle"
            android:text="@string/blackCards" />

</LinearLayout>